--- a/Mission6_cam4del/Views/Shared/_Layout.cshtml
+++ b/Mission6_cam4del/Views/Shared/_Layout.cshtml
@@ -25,7 +25,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Podcasts">My Podcasts</a>
                         </li>
                         <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieApplication">Enter Movie</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieApplication">Enter Movie</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieList">Movie List</a>
                         </li>
                     </ul>
                 </div>
